Closed Bug 1384869 Opened 8 years ago Closed 8 years ago

Fix ImageCompositeNotification when WebRender is enabled

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file, 3 obsolete files)

ImageCompositeNotification is not connected when WebRender is enabled. It needs to be addressed.
Assignee: nobody → sotaro.ikeda.g
Blocks: webrender
Attachment #8890764 - Attachment is obsolete: true
Attachment #8890787 - Attachment is obsolete: true
Attachment #8890804 - Flags: review?(nical.bugzilla)
Comment on attachment 8890804 [details] [diff] [review] patch - Fix ImageCompositeNotification when WebRender is enabled Review of attachment 8890804 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/wr/WebRenderCompositableHolder.h @@ +84,5 @@ > + { > + mImageCompositeNotifications.AppendElement(aNotification); > + } > + > + void ExtractImageCompositeNotifications(nsTArray<ImageCompositeNotificationInfo>* aNotifications) nit: for some reason I read this the other way around: "this extracts notification from aNotifications". How about "FlushImageNotifications"? ::: gfx/layers/wr/WebRenderImageHost.cpp @@ +168,5 @@ > + mAsyncRef.mHandle, > + img->mTimeStamp, mWrBridge->CompositableHolder()->GetCompositionTime(), > + img->mFrameID, img->mProducerID); > + mWrBridge->CompositableHolder()->AppendImageCompositeNotification(info); > + printf_stderr("WebRenderImageHost::GetAsTextureHostForComposite() if (mAsyncRef) \n"); Need to remove this printf before landing.
Attachment #8890804 - Flags: review?(nical.bugzilla) → review+
(In reply to Nicolas Silva [:nical] from comment #5) > Comment on attachment 8890804 [details] [diff] [review] > patch - Fix ImageCompositeNotification when WebRender is enabled > > Review of attachment 8890804 [details] [diff] [review]: > ----------------------------------------------------------------- > > ::: gfx/layers/wr/WebRenderCompositableHolder.h > @@ +84,5 @@ > > + { > > + mImageCompositeNotifications.AppendElement(aNotification); > > + } > > + > > + void ExtractImageCompositeNotifications(nsTArray<ImageCompositeNotificationInfo>* aNotifications) > > nit: for some reason I read this the other way around: "this extracts > notification from aNotifications". How about "FlushImageNotifications"? I'll update it in a next patch. > > ::: gfx/layers/wr/WebRenderImageHost.cpp > @@ +168,5 @@ > > + mAsyncRef.mHandle, > > + img->mTimeStamp, mWrBridge->CompositableHolder()->GetCompositionTime(), > > + img->mFrameID, img->mProducerID); > > + mWrBridge->CompositableHolder()->AppendImageCompositeNotification(info); > > + printf_stderr("WebRenderImageHost::GetAsTextureHostForComposite() if (mAsyncRef) \n"); > > Need to remove this printf before landing. Oh, I forgot to remove it. I'll update it in a next patch.
Attachment #8891861 - Flags: review+
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/748a817e823e Fix ImageCompositeNotification when WebRender is enabled r=nical
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: