Bug 1384869 - Fix ImageCompositeNotification when WebRender is enabled r=nical